Fix layout shift due to borders

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,9 +1,10 @@
 .dropzone {
-  border: 1px dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: 0.25rem;
 
   display: grid;
- justify-items: center;
+  justify-items: center;
   gap: 0.5rem;
 
   text-align: center;
@@ -24,7 +25,7 @@
   }
 
   &:hover, &:has(input:focus){
-    border-width: 2px;
+    outline-width: 0;
     border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
 
